# server_lux

./: .env.community  .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  README.md  cliff.toml  cloudbuild.master.yaml  cloudbuild.tag.yaml  docker-compose.yml  pyproject.toml  requirements.txt  test_angle_calculation.py  test_obstruction_multi.py
.github/workflows/: changelog.yml  deploy-scaleway.yml  release.yml
assets/: obstruction_response.json  stats_request.json  values.npy
deployment/: .env.docker  .env.docker.example  .env.full-stack  .env.full-stack.example  .env.production.debug.example  .env.production.example  .env.scaleway.example  FULL_STACK_DEPLOYMENT.md  SCALEWAY_DEPLOYMENT.md  deploy-docker.sh  deploy-full-stack.sh  deploy-obstruction-scaleway.sh  deploy-scaleway.sh  docker-compose-full-stack.yml  docker-compose.scaleway.yml  docker-compose.yml  nginx-docker.conf  nginx-scaleway.conf  setup-cloudflare.sh  setup-vm.sh
deployment/certs/: .gitignore
docs/: API_ENDPOINTS.md  AUTHENTICATION_MODES.md  LOCAL_DEPLOYMENT.md  api.md  deployment.md  microservices.md  run_schema.md
example/: demo.ipynb
src/: main.py  main.py.bak
src/server/: auth.py  auth_config.py  auth_factory.py  auth_strategies.py  config.py  constants.py  endpoint_handlers.py  enums.py  exceptions.py  interfaces.py  maps.py  request_handler.py  response_builder.py  route_configurator.py  swagger_config.py
src/utils/: extended_enum.py  utils.py
tests/: README.md  __init__.py  test_local_endpoint.py
tests/server/: __init__.py  test_auth.py  test_model_contracts.py  (+7 more)
(+90 files in other folders)
